# advent-of-code

./: .gitignore  README.md
2018/: Cargo.toml  README.md
2018/src/: main.rs
2019/: package.yaml
2019/app/: Main.hs
2019/src/: Day1.hs  Day2.hs
2021/: .gitignore  .tool-versions  Cargo.toml  README.md  aoc2021.cabal  build.zig  hie.yaml
2021/day/1/: Main.hs
2021/day/3/: Main.hs
2021/day/4/: Main.hs
2021/day/5/: Main.hs
2021/elixir/: day1.exs
2021/examples/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
2021/haskell/day1/: Main.hs
2021/haskell/day10/: Main.hs
2021/haskell/day11/: Main.hs
2021/haskell/day12/: Main.hs
2021/haskell/day13/: Main.hs
2021/haskell/day14/: Main.hs
2021/haskell/day15/: Main.hs
2021/haskell/day2/: Main.hs
2021/haskell/day4/: Main.hs
2021/haskell/day6/: Main.hs
2021/haskell/day7/: Main.hs
2021/haskell/day8/: Main.hs
2021/haskell/day9/: Main.hs
2021/idris/: day1.idr
2021/ocaml/: day1.ml  day6.ml  day7.ml  dune
2021/src/: AOC.hs  lib.rs  main.rs
2021/zig/: day01.zig
