cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0
author:        Alex Vzorov
maintainer:    alex.vzorov@gmail.com

library
  build-depends:   base
  hs-source-dirs:  src
  exposed-modules: AOC

executable day1
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   day/1
  default-language: Haskell2010

executable day2
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   day/2
  default-language: Haskell2010

executable day3
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  hs-source-dirs:   day/3
  default-language: Haskell2010

executable day4
  main-is:          Main.hs
  build-depends:
    , base ^>=4.14.3.0
    , containers
  hs-source-dirs:   day/4
  default-language: Haskell2010
