cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0
author:        Alex Vzorov
maintainer:    alex.vzorov@gmail.com

executable day1
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   haskell/day1
  default-language: Haskell2010

executable day2
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   haskell/day2
  default-language: Haskell2010

executable day3
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  hs-source-dirs:   haskell/day3
  default-language: Haskell2010

executable day4
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  hs-source-dirs:   haskell/day4
  default-language: Haskell2010

executable day5
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  hs-source-dirs:   haskell/day5
  default-language: Haskell2010

executable day6
  main-is:          Main.hs
  build-depends:
    , array
    , base   ^>=4.14.3.0

  hs-source-dirs:   haskell/day6
  default-language: Haskell2010

executable day7
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   haskell/day7
  default-language: Haskell2010

executable day8
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0, unordered-containers, containers
  hs-source-dirs:   haskell/day8
  default-language: Haskell2010

executable day9
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0, vector
  hs-source-dirs:   haskell/day9
  default-language: Haskell2010

executable day10
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   haskell/day10
  default-language: Haskell2010
